--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,11 +1,11 @@
 footer {
-  background-color: var(--light-color);
+  /* background-color: var(--light-color); */
   font-size: var(--body-font-size-xs);
 }
 
 footer .footer > div {
   margin: auto;
-  max-width: 1200px;
+  /* max-width: 1200px; */
   padding: 40px 24px 24px;
 }
 
@@ -15,6 +15,68 @@ footer .footer p {
 
 @media (width >= 900px) {
   footer .footer > div {
-    padding: 40px 32px 24px;
+    /* padding: 40px 32px 24px; */
+    padding: 0 !important;
+    margin: 0 !important;
   }
+}
+.footer-top .default-content-wrapper{
+  display: flex;
+  border-top: 2px solid rgb(243 244 246 / 1);
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.footer-top ul{
+  flex-grow: 1;
+  list-style: none;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 0 !important;
+}
+.footer-bottom .default-content-wrapper{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  height: 4rem;
+  border-top: 2px solid rgb(243 244 246 / 1);
+  
+}
+.footer-bottom ul{
+  display: flex;
+  list-style: none;
+  margin: 0 !important;
+  flex-grow: 1;
+  justify-content: center;
+  padding: 0 !important;
+  gap: 10px;
+}
+.footer-bottom img{
+  flex-grow: 1;
+  width: 102px;
+  height: 18px;
+}
+.footer-bottom .default-content-wrapper p:nth-child(1){
+  flex-grow: 1;
+  text-align: center;
+}
+.footer-bottom a{
+  all:unset !important
+}
+.footer-top li{
+  max-width: 280px !important;
+  color:#4B5563;
+  text-align: center;
+}
+.footer-bottom li,.footer-bottom p {
+  color:#4B5563;
+  text-align: center;
+}
+.footer-top li:first-of-type {
+  font-weight: 600;
+}
+.icon-venialogo{
+  width: 128px;
 }
